DP-13368 IllegalInstantiation