@@ -30,14 +30,14 @@ public class DataFlowServiceImplFunctionalTestNG extends ModelQualityFunctionalT
 
             df = spiedDataFlowService.createLatestProductionDataFlow();
             Assert.assertNotNull(df);
-            Assert.assertEquals(new Integer(initialVersion + 1), df.getVersion());
+            Assert.assertEquals(Integer.valueOf(initialVersion + 1), df.getVersion());
             Assert.assertEquals("PRODUCTION-z_9.9.8-SNAPSHOT", df.getName());
             Assert.assertNotNull(dataFlowEntityMgr.findByName("PRODUCTION-z_9.9.8-SNAPSHOT"));
 
             doReturn("z/9.9.9-SNAPSHOT").when(spiedDataFlowService).getLedsVersion();
             df = spiedDataFlowService.createLatestProductionDataFlow();
             Assert.assertNotNull(df);
-            Assert.assertEquals(new Integer(initialVersion + 2), df.getVersion());
+            Assert.assertEquals(Integer.valueOf(initialVersion + 2), df.getVersion());
             Assert.assertEquals("PRODUCTION-z_9.9.9-SNAPSHOT", df.getName());
             Assert.assertNotNull(dataFlowEntityMgr.findByName("PRODUCTION-z_9.9.9-SNAPSHOT"));
         } catch (Exception e) {
