@@ -32,14 +32,14 @@ public class PropDataServiceImplFunctionalTestNG extends ModelQualityFunctionalT
 
             pd = spiedPropDataService.createLatestProductionPropData();
             Assert.assertNotNull(pd);
-            Assert.assertEquals(new Integer(initialVersion + 1), pd.getVersion());
+            Assert.assertEquals(Integer.valueOf(initialVersion + 1), pd.getVersion());
             Assert.assertEquals("PRODUCTION-z_9.9.8-SNAPSHOT", pd.getName());
             Assert.assertNotNull(propDataEntityMgr.findByName("PRODUCTION-z_9.9.8-SNAPSHOT"));
 
             doReturn("z/9.9.9-SNAPSHOT").when(spiedPropDataService).getLedsVersion();
             pd = spiedPropDataService.createLatestProductionPropData();
             Assert.assertNotNull(pd);
-            Assert.assertEquals(new Integer(initialVersion + 2), pd.getVersion());
+            Assert.assertEquals(Integer.valueOf(initialVersion + 2), pd.getVersion());
             Assert.assertEquals("PRODUCTION-z_9.9.9-SNAPSHOT", pd.getName());
             Assert.assertNotNull(propDataEntityMgr.findByName("PRODUCTION-z_9.9.9-SNAPSHOT"));
         } catch (Exception e) {
